# blacklist-app

./: New-BlacklistProject.ps1
blacklist-app/: .env.example  .gitignore  README.md  pyproject.toml
blacklist-app/deploy/logrotate/: blacklist-app
blacklist-app/deploy/nginx/: blacklist-app.conf
blacklist-app/deploy/systemd/: blacklist-app.service
blacklist-app/src/blacklist_app/: logging_config.py  main.py  settings.py
blacklist-app/src/blacklist_app/api/routers/: entries.py  feeds.py  ingest.py  ui.py
blacklist-app/src/blacklist_app/auth/: ad_ldap.py  dependencies.py
blacklist-app/src/blacklist_app/db/: engine.py  models.py
blacklist-app/src/blacklist_app/services/: audit_service.py  blacklist_service.py
blacklist-app/src/blacklist_app/static/: styles.css
blacklist-app/src/blacklist_app/templates/: base.html  entries.html  index.html
